--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -33,8 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 
-<%= render("lesli/wrappers/application-devise-simple", 
-    title: "Forgot your password?") do %>
+<%= render("lesli/wrappers/application-devise-simple", title: "Forgot your password?") do %>
 
     <form class="has-text-centered" @submit="postPasswordNew" method="post">
 
