--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -58,6 +58,7 @@ $navbar-background-color: transparent;
 @import "bulma/sass/components/dropdown";
 @import "bulma/sass/components/pagination";
 
+@import "bulma/sass/elements/notification";
 @import "bulma/sass/elements/container";
 @import "bulma/sass/elements/button";
 @import "bulma/sass/elements/image";
