--- a/lib/sass/lesli/pages/devise-simple.scss
+++ b/lib/sass/lesli/pages/devise-simple.scss
@@ -41,8 +41,9 @@ main {
     .hero-head {
         padding: 8rem 0 4rem;
 
-        .app-logo {
+        .lesli-logo {
             max-width: 130px;
+            margin-bottom: 1rem;
         }
     }
 
