--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,79 @@
-<h2>Change your password</h2>
+<%
+=begin
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+Lesli
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
+Copyright (c) 2023, Lesli Technologies, S. A.
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+=end
+%>
+
+<%= render("lesli/wrappers/application-devise-simple", title: "Cambiar contraseña") do %>
+
+    <form ref="form" @submit="putPasswordEdit">
+        <p v-if="notification.show" :class="[notification.type, 'is-size-5', 'mt-2']">
+            {{ notification.message }}
+        </p>
+        <div class="field mb-4">
+            <p class="label mb-2">Ingrese su nueva contraseña</p>
+            <p class="control has-icons-left">  
+                <input 
+                    class="input" 
+                    type="password"
+                    v-model="password_edit.new_password"
+                    required="true"
+                    name="user_email"
+                    placeholder="Contraseña nueva"
+                />
+                <span class="icon is-small is-left">
+                    <i class="ri-key-line"></i>
+                </span>
+            </p>
+        </div>
+        <div class="field mb-4">
+            <p class="label mb-1">Confirmar contraseña</p>
+            <p class="control has-icons-left">  
+                <input 
+                    class="input" 
+                    type="password"
+                    v-model="password_edit.new_password_confirmation"
+                    required="true"
+                    name="user_email"
+                    placeholder="Confirmar contraseña"
+                />
+                <span class="icon is-small is-left">
+                    <i class="ri-key-2-line"></i>
+                </span>
+            </p>
+        </div>
+        <div class="login-controls has-text-centered">
+            <button class="button is-primary">
+                Cambiar contraseña
+            </button>
+        </div>
+    </form>
 <% end %>
-
-<%= render "devise/shared/links" %>
