feat: enagle role powers

--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -52,6 +52,7 @@ $navbar-background-color: transparent;
 
 @import "bulma/sass/form/all";
 
+@import "bulma/sass/components/card";
 @import "bulma/sass/components/tabs";
 @import "bulma/sass/components/media";
 @import "bulma/sass/components/level";
