--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -34,10 +34,12 @@ Building a better future, one line of code at a time.
 
 <lesli-application-header 
     <%= "show-bell" if defined?(CloudBell) %>
-    <%= "show-announcements" if defined?(CloudBell) %>
     <%= "show-focus" if defined?(CloudFocus) %>
     <%= "show-tickets" if defined?(CloudHelp) %>
+    <%= "show-announcements" if defined?(CloudBell) %>
+    engine-path="<%= lesli_engine(:path) %>"
     :show-engines="true">
+    
 
     <%# language selector %>
     <% if I18n.available_locales.length > 1 %>
