--- a/lib/sass/lesli/bulma/loader.scss
+++ b/lib/sass/lesli/bulma/loader.scss
@@ -66,6 +66,7 @@ $navbar-background-color: transparent;
 @import "bulma/sass/elements/title";
 @import "bulma/sass/elements/table";
 @import "bulma/sass/elements/icon";
+@import "bulma/sass/elements/tag";
 
 @import "bulma/sass/grid/columns";
 
