feat: add header translations

--- a/app/views/lesli/partials/_application-data.html.erb
+++ b/app/views/lesli/partials/_application-data.html.erb
@@ -34,6 +34,8 @@ Building a better future, one line of code at a time.
 
 <%
 
+# Should I move this to a base controller?
+
 # add company information (account)
 @lesli[:company] = {
     name: current_user.account.company_name,
