feat: add LesliLetter engine

--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -49,9 +49,9 @@ Building a better future, one line of code at a time.
 
     <%# Productivity & teamwork %>
     <%= navigation_engine_driver %>
+    <%= navigation_engine_letter %>
     <%= navigation_engine_work %>
     <%= navigation_engine_focus %>
-    <%= navigation_engine_text %>
     <%= navigation_engine_social %>
     <%= navigation_engine_bell %>
     <%= navigation_engine_time %>
@@ -64,9 +64,9 @@ Building a better future, one line of code at a time.
 
     <%# IT & Help desk %>
     <%= navigation_engine_kb %>
-    <%= navigation_engine_help %>
     <%= navigation_engine_portal %>
     <%= navigation_engine_shared %>
+    <%= navigation_engine_support %>
 
     <%# Security & privacy %>
     <%= navigation_engine_audit %>
