--- a/lib/sass/lesli/components/editor-richtext.scss
+++ b/lib/sass/lesli/components/editor-richtext.scss
@@ -75,4 +75,14 @@ Building a better future, one line of code at a time.
     .attachment--png {
         display: none !important;
     }
+
+    // custom buttons
+    .trix-lesli-button {
+        background-color: transparent;
+        color: lesli-css-color(silver, 900);
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
