feat: process css files using webpack

--- a/app/views/lesli/wrappers/_application-devise.html.erb
+++ b/app/views/lesli/wrappers/_application-devise.html.erb
@@ -18,7 +18,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
@@ -58,7 +58,7 @@ Building a better future, one line of code at a time.
                     <%# Logo container %>
                     <div class="logo has-text-centered mb-4">
                         <%= image_tag(
-                            "#{lesli_instance_code}/brand/app-auth.svg",    # dynamic path to the instance main logo
+                           "#{lesli_instance_code}/brand/app-auth.svg",    # dynamic path to the instance main logo
                             :class => "#{lesli_instance_code}-logo",        # dynamic class according to the instance
                             :alt => "Main logo") 
                         %>
