--- a/lib/scss/pages/devise.scss
+++ b/lib/scss/pages/devise.scss
@@ -32,7 +32,11 @@ Building a better future, one line of code at a time.
 
 
 // ·
-@import "lesli/templates/public";
+@import "lesli-css";
+
+
+// ·
+@import "LesliStyle/templates/public";
 
 
 // ·
