--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -34,7 +34,7 @@ Building a better future, one line of code at a time.
 // · 
 @import "lesli-css";
 
-
+/*
 // · Configuration & variables
 @import "lesli/settings/variables";
 
@@ -155,3 +155,4 @@ h1, h2, h3, h4, h5, h6 {
 .is-hidden {
     display: none !important;
 }
+*/
