--- a/app/views/lesli/partials/_application-public-javascript.html.erb
+++ b/app/views/lesli/partials/_application-public-javascript.html.erb
@@ -18,7 +18,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
@@ -31,9 +31,6 @@ Building a better future, one line of code at a time.
 // · 
 =end
 %>
-
-<%# Temporary to avoid reference errors %>
-<%= javascript_include_tag "lesli/i18n" %>
 
 
 <% is_devise = controller_path.split('/')[0] == "users" %>
