--- a/lib/scss/fonts/remixicons.scss
+++ b/lib/scss/fonts/remixicons.scss
@@ -23,7 +23,7 @@ Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -34,7 +34,7 @@ Building a better future, one line of code at a time.
 // · 
 @font-face {
     font-family: "remixicon";
-    src: font-url("lesli/Remix/remixicon.ttf") format("truetype"); /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    src: url("lesli/Remix/remixicon.ttf") format("truetype");
     font-display: swap;
 }
 
