feat: continue migration to lesli-vue

--- a/app/views/lesli/partials/_application-lesli-javascript.html.erb
+++ b/app/views/lesli/partials/_application-lesli-javascript.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 <%# Temporary to avoid reference errors %>
-<%#= javascript_include_tag "lesli/i18n" %>
+<%= javascript_include_tag "lesli/i18n" %>
 
 
 <%# Including main Lesli application %>
