--- a/app/views/lesli/partials/_application-data.html.erb
+++ b/app/views/lesli/partials/_application-data.html.erb
@@ -43,7 +43,8 @@ Building a better future, one line of code at a time.
 
 # set user information
 @lesli[:current_user] = {
-    id: current_user.id
+    id: current_user.id,
+    name: current_user.first_name
 }
 
 
@@ -65,6 +66,7 @@ end
 
 <% # define @account data for the lesli plugin %>
 <script>const lesli = <%= @lesli.to_json.html_safe %></script>
+<script>const Lesli = <%= @lesli.to_json.html_safe %></script>
 
 <%#
 @lesli[:revision] = 0
