feat: prepare app for production mode

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -52,6 +52,6 @@ Building a better future, one line of code at a time.
     </main>
     <%= render partial: "lesli/partials/application-lesli-javascript" %>
     <%= render partial: "lesli/partials/application-lesli-icons" %>
-    <%#= render partial: "lesli/partials/application-analytics" %>
+    <%= render partial: "lesli/partials/application-analytics" %>
 </body>
 </html>
