--- a/app/views/lesli/layouts/application-public.html.erb
+++ b/app/views/lesli/layouts/application-public.html.erb
@@ -54,6 +54,6 @@ Building a better future, one line of code at a time.
     <h1>public layout</h1>
     <%#= yield %>
     <%= render partial: "lesli/partials/application-public-javascript" %>
-    <%#= render partial: "lesli/partials/application-analytics" %>
+    <%= render partial: "lesli/partials/application-analytics" %>
 </body>
 </html>
