--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -35,8 +35,9 @@ Building a better future, one line of code at a time.
 <!DOCTYPE html>
 <html>
 <head>
+    <script>const Lesli = <%= @lesli.to_json.html_safe %></script>
     <%= render partial: "lesli/partials/application-head" %>
-    <%#= render partial: "lesli/partials/application-data" %>
+    <%# render partial: "lesli/partials/application-data" %>
     <%= render partial: "lesli/partials/application-public-scss" %>
     <%= yield :application_custom_assets %>
     <%# Disable back button in browser after Logout using JavaScript %>
@@ -53,6 +54,6 @@ Building a better future, one line of code at a time.
     <%#= yield :application_public_custom_header %>
     <%= yield %>
     <%= render partial: "lesli/partials/application-public-javascript" %>
-    <%#= render partial: "lesli/partials/application-analytics" %>
+    <%= render partial: "lesli/partials/application-analytics" %>
 </body>
 </html>
