--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -39,28 +39,34 @@ Building a better future, one line of code at a time.
     <%= "show-tickets" if defined?(LesliHelp) %>
     engine-path="<%= defined?(LesliDashboard) ? lesli_dashboard.root_path : lesli_engine(:path)%>">
     
+    <template v-slot:brand>
+        <%= customization_instance_logo_tag(logo: "app-icon", options: { alt: "App logo", class: "is-hidden-desktop" }) %>
+        <%= customization_instance_logo_tag(logo: "app-logo", options: { alt: "App logo", class: "is-hidden-touch" }) %>
+    </template>
 
-    <%# language selector %>
-    <% if I18n.available_locales.length > 1 %>
-        <div class="dropdown is-hoverable header-language-selector">
-            <div class="dropdown-trigger">
-                <span class="icon has-text-link">
-                    <%= lesli_svg("locale-#{locale}") %>
-                </span>
-            </div>
-            <div class="dropdown-menu" id="dropdown-menu-locale" role="menu">
-                <div class="dropdown-content">
-                    <% I18n.available_locales.each do |locale| %>
-                        <% next if locale == I18n.locale %>
-                        <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
-                            <span class="icon has-text-grey-light">
-                                <%= lesli_svg("locale-#{locale}") %>
-                            </span>
-                            <span><%= language_name(locale) %></span>
+    <template>
+        <%# language selector %>
+        <% if I18n.available_locales.length > 1 %>
+            <div class="dropdown is-hoverable header-language-selector">
+                <div class="dropdown-trigger">
+                    <span class="icon has-text-link">
+                        <%= lesli_svg("locale-#{locale}") %>
+                    </span>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu-locale" role="menu">
+                    <div class="dropdown-content">
+                        <% I18n.available_locales.each do |locale| %>
+                            <% next if locale == I18n.locale %>
+                            <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
+                                <span class="icon has-text-grey-light">
+                                    <%= lesli_svg("locale-#{locale}") %>
+                                </span>
+                                <span><%= language_name(locale) %></span>
+                            <% end %>
                         <% end %>
-                    <% end %>
+                    </div>
                 </div>
             </div>
-        </div>
-    <% end %>
+        <% end %>
+    </template>
 </lesli-application-header>
