--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -89,6 +89,7 @@ Building a better future, one line of code at a time.
 
 // · Overrides for vendor libraries
 // @import "lesli/overrides/sweetalert";
+@import "Lesli/scss/overrides/notification";
 
 
 // · Lesli vue components
