feat: move styles to own library

--- a/lib/scss/overrides/notification.scss
+++ b/lib/scss/overrides/notification.scss
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 
 // · 
 .lesli-msg {
-    position: absolute;
+    position: fixed;
     width: 100%;
     top: 40px;
 
