--- a/lib/scss/pages/devise-simple.scss
+++ b/lib/scss/pages/devise-simple.scss
@@ -30,10 +30,12 @@ Building a better future, one line of code at a time.
 // · 
 */
 
-@import "lesli/templates/public";
-@import "lesli/fonts/remixicons.scss";
+
+// · 
+@import "Lesli/scss/templates/public";
 
 
+// · 
 main {
     background: white;
 
