feat: enable calendar engine

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -47,7 +47,7 @@ Building a better future, one line of code at a time.
         <%= render partial: "lesli/partials/application-lesli-sidebar" %>
         <%= render partial: "lesli/partials/application-lesli-content" %>
         <%= render partial: "lesli/partials/application-lesli-engines" %>
-        <%#= render partial: "lesli/partials/application-lesli-panels" %>
+        <%= render partial: "lesli/partials/application-lesli-panels" %>
         <%#= render partial: "lesli/partials/application-lesli-footer" %>
     </main>
     <%= render partial: "lesli/partials/application-lesli-javascript" %>
