--- a/app/views/lesli/partials/_application-lesli-panels.html.erb
+++ b/app/views/lesli/partials/_application-lesli-panels.html.erb
@@ -47,12 +47,12 @@ Building a better future, one line of code at a time.
 
 
 <%# Loading standar help panels %>
-<% if defined?(CloudHelp) %>
-    <application-component-panel-tickets></application-component-panel-tickets>
+<% if defined?(LesliSupport) %>
+    <application-panel-support-tickets></application-panel-support-tickets>
 <% end %>
 
 <%# Loading user profile panel %>
-<application-component-panel-profile></application-component-panel-profile>
+<%# <application-component-panel-profile></application-component-panel-profile> %>
 
 <%# Loading cloud object files panel %>
-<application-component-panel-files></application-component-panel-files>
+<%# <application-component-panel-files></application-component-panel-files> %>
