--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -69,7 +69,7 @@ Building a better future, one line of code at a time.
 
 // · Lesli core panels 
 // @import "lesli/panels/panel-tasks";
-// @import "lesli/panels/panel-ticket";
+@import "Lesli/scss/panels/panel-support-ticket";
 // @import "lesli/panels/panel-profile";
 // @import "lesli/panels/panel-notification";
 // @import "lesli/panels/panel-announcements";
