--- a/app/assets/stylesheets/lesli/templates/application.css
+++ b/app/assets/stylesheets/lesli/templates/application.css
@@ -111,81 +111,6 @@ Building a better future, one line of code at a time.
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // ·  
-
-*/
-.lesli-form > fieldset {
-  padding: 1.5rem 1rem;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-}
-.lesli-form > fieldset fieldset {
-  padding: 1rem 1rem;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-/*
-
-Lesli
-
-Copyright (c) 2023, Lesli Technologies, S. A.
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program. If not, see http://www.gnu.org/licenses/.
-
-Lesli · Ruby on Rails SaaS Development Framework.
-
-Made with ♥ by https://www.lesli.tech
-Building a better future, one line of code at a time.
-
-@contact  hello@lesli.tech
-@website  https://www.lesli.tech
-@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
-
-// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// · 
-*/
-/*
-
-Lesli
-
-Copyright (c) 2023, Lesli Technologies, S. A.
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program. If not, see http://www.gnu.org/licenses/.
-
-Lesli · Ruby on Rails SaaS development platform.
-
-Made with ♥ by https://www.lesli.tech
-Building a better future, one line of code at a time.
-
-@contact  hello@lesli.tech
-@website  https://www.lesli.tech
-@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
-
-// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
 */
 /*
 Lesli
@@ -971,58 +896,60 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 */
-table.lesli-table {
-  display: table;
+div.lesli-tab div.tabs {
+  margin-bottom: 0;
+}
+div.lesli-tab div.tabs li.is-active {
+  font-weight: 600;
+}
+div.lesli-tab div.tab-items {
+  background-color: white;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  --table-cell-padding: 1rem;
+  border-radius: 0 0 5px 5px;
 }
-table.lesli-table.is-narrow {
-  --table-cell-padding: 0.25em 0.5em;
+
+/*
+
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS development platform.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// ·  
+
+*/
+.lesli-form > fieldset {
+  padding: 1.5rem 1rem;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-table.lesli-table thead {
-  border-radius: 10px 10px 0 0;
-  background-color: #E2E6F6;
-}
-table.lesli-table thead th {
-  border: none;
-  font-weight: 700;
-  vertical-align: middle;
-}
-table.lesli-table thead .icon-text {
-  flex-wrap: nowrap;
-}
-table.lesli-table thead .icon-text span {
-  white-space: nowrap;
-}
-table.lesli-table thead .icon-text:hover {
-  cursor: pointer;
-}
-table.lesli-table tbody td {
-  vertical-align: middle;
-}
-table.lesli-table tbody td:has(a) {
-  padding: 0 !important;
-}
-table.lesli-table tbody td:has(a) > a {
-  display: block;
-  padding: var(--table-cell-padding);
-}
-table.lesli-table td.detail-row {
-  width: 40px;
-}
-table.lesli-table td.options .dropdown .button {
-  background-color: transparent;
-  border: none;
-}
-table.lesli-table td.options .dropdown .dropdown-content {
-  padding: 0;
-}
-table.lesli-table td.options .dropdown .dropdown-item {
-  display: flex;
-  padding: 0.8rem;
-}
-table.lesli-table td.options .dropdown .dropdown-item .material-icons {
-  margin-right: 8px;
+.lesli-form > fieldset fieldset {
+  padding: 1.2rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 /*
@@ -1457,18 +1384,91 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 */
-div.lesli-tab div.tabs {
-  margin-bottom: 0;
-}
-div.lesli-tab div.tabs li.is-active {
-  font-weight: 600;
-}
-div.lesli-tab div.tab-items {
-  background-color: white;
+table.lesli-table {
+  display: table;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-  border-radius: 0 0 5px 5px;
+  --table-cell-padding: 1rem;
+}
+table.lesli-table.is-narrow {
+  --table-cell-padding: 0.25em 0.5em;
+}
+table.lesli-table thead {
+  border-radius: 10px 10px 0 0;
+  background-color: #E2E6F6;
+}
+table.lesli-table thead th {
+  border: none;
+  font-weight: 700;
+  vertical-align: middle;
+}
+table.lesli-table thead .icon-text {
+  flex-wrap: nowrap;
+}
+table.lesli-table thead .icon-text span {
+  white-space: nowrap;
+}
+table.lesli-table thead .icon-text:hover {
+  cursor: pointer;
+}
+table.lesli-table tbody td {
+  vertical-align: middle;
+}
+table.lesli-table tbody td:has(a) {
+  padding: 0 !important;
+}
+table.lesli-table tbody td:has(a) > a {
+  display: block;
+  padding: var(--table-cell-padding);
+}
+table.lesli-table td.detail-row {
+  width: 40px;
+}
+table.lesli-table td.options .dropdown .button {
+  background-color: transparent;
+  border: none;
+}
+table.lesli-table td.options .dropdown .dropdown-content {
+  padding: 0;
+}
+table.lesli-table td.options .dropdown .dropdown-item {
+  display: flex;
+  padding: 0.8rem;
+}
+table.lesli-table td.options .dropdown .dropdown-item .material-icons {
+  margin-right: 8px;
 }
 
+/*
+
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+*/
 /*
 
 Lesli
@@ -22708,6 +22708,54 @@ Building a better future, one line of code at a time.
   font-size: initial;
   height: initial;
   padding: 0px 6px;
+}
+
+/*
+
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
+Made with ♥ by LesliTech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+*/
+.lesli-panel-tickets .lesli-panel-content {
+  overflow-y: scroll;
+}
+.lesli-panel-tickets .lesli-panel-content .lastest-tickets {
+  margin: 30px;
+  border-bottom: 1px solid #abacae;
+}
+.lesli-panel-tickets .lesli-panel-content .lastest-tickets h4 {
+  margin-bottom: 20px;
+}
+.lesli-panel-tickets .lesli-panel-content .form {
+  margin: 30px;
+}
+.lesli-panel-tickets .lesli-panel-content .form h4 {
+  margin-bottom: 20px;
 }
 
 /*
